fixed layout issues

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -13,21 +13,12 @@ body {
     box-sizing: border-box;
 }
 h1 {
-    /* margin: 0 0 40px 0; */
     text-align: left;
-    /* padding-top: 20px; */
-    /* padding-right: 20px; */
-    /* padding-bottom: 10px; */
-    /* padding-left: 10px; */
 }
 
-/* form {
-    margin-bottom: 0px;
-} */
 
 form {
     width: 100%;
-    /* position: relative; */
     align-items: center;
     margin: 0;
     padding: 0;
@@ -37,12 +28,11 @@ form {
 }
 
 .button-container {
-    /* width: 200px; */
-    /* height: 200px; */
     flex-grow: 1;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
+    padding-bottom: 50px;
 }
 .button {
     /* padding-right: 10px; */
@@ -111,14 +101,16 @@ input {
 }
 
 
-
-#outputText {
-    width: 100%;
-    /* position: relative; */
-    align-items: center;
-    margin: 0;
-    padding: 0;
-    display: flex; /* or inline-block, depending on your layout */
+.output_container {
     flex-grow: 1;
+    display: flex;
     justify-content: center;
+    align-items: center;
+
+}
+
+.outputText {
+    display: flex;
+    position: relative;
+    width: 90%;
 }
